Add axios dependency and add superAdmin routes with controller and service
