# swagger_output.json
@@ -148,7 +148,7 @@
         }
       }
     },
-    "/user/create/superadmin": {
+    "/user/updateUser": {
       "post": {
         "description": "",
         "parameters": [
@@ -171,78 +171,6 @@
               "schema": {
                 "type": "object",
                 "properties": {
-                  "userName": {
-                    "example": "any"
-                  },
-                  "fullName": {
-                    "example": "any"
-                  },
-                  "password": {
-                    "example": "any"
-                  },
-                  "confirmPassword": {
-                    "example": "any"
-                  },
-                  "phoneNumber": {
-                    "example": "any"
-                  },
-                  "city": {
-                    "example": "any"
-                  },
-                  "roleName": {
-                    "example": "any"
-                  },
-                  "myPartnership": {
-                    "example": "any"
-                  },
-                  "creditRefrence": {
-                    "example": "any"
-                  },
-                  "exposureLimit": {
-                    "example": "any"
-                  },
-                  "maxBetLimit": {
-                    "example": "any"
-                  },
-                  "minBetLimit": {
-                    "example": "any"
-                  },
-                  "domain": {
-                    "example": "any"
-                  },
-                  "logo": {
-                    "example": "any"
-                  },
-                  "sidebarColor": {
-                    "example": "any"
-                  },
-                  "headerColor": {
-                    "example": "any"
-                  },
-                  "footerColor": {
-                    "example": "any"
-                  }
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/user/updateUser": {
-      "post": {
-        "description": "",
-        "responses": {
-          "default": {
-            "description": ""
-          }
-        },
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "properties": {
                   "sessionCommission": {
                     "example": "any"
                   },
@@ -253,9 +181,6 @@
                     "example": "any"
                   },
                   "id": {
-                    "example": "any"
-                  },
-                  "createBy": {
                     "example": "any"
                   }
                 }
@@ -679,6 +604,141 @@
                     "example": "any"
                   },
                   "remark": {
+                    "example": "any"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/superadmin/add": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "token",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        },
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "userName": {
+                    "example": "any"
+                  },
+                  "fullName": {
+                    "example": "any"
+                  },
+                  "password": {
+                    "example": "any"
+                  },
+                  "confirmPassword": {
+                    "example": "any"
+                  },
+                  "phoneNumber": {
+                    "example": "any"
+                  },
+                  "city": {
+                    "example": "any"
+                  },
+                  "roleName": {
+                    "example": "any"
+                  },
+                  "myPartnership": {
+                    "example": "any"
+                  },
+                  "creditRefrence": {
+                    "example": "any"
+                  },
+                  "exposureLimit": {
+                    "example": "any"
+                  },
+                  "maxBetLimit": {
+                    "example": "any"
+                  },
+                  "minBetLimit": {
+                    "example": "any"
+                  },
+                  "domain": {
+                    "example": "any"
+                  },
+                  "logo": {
+                    "example": "any"
+                  },
+                  "sidebarColor": {
+                    "example": "any"
+                  },
+                  "headerColor": {
+                    "example": "any"
+                  },
+                  "footerColor": {
+                    "example": "any"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/superadmin/updateUser": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "token",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        },
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "sessionCommission": {
+                    "example": "any"
+                  },
+                  "matchComissionType": {
+                    "example": "any"
+                  },
+                  "matchCommission": {
+                    "example": "any"
+                  },
+                  "id": {
+                    "example": "any"
+                  },
+                  "logo": {
+                    "example": "any"
+                  },
+                  "sidebarColor": {
+                    "example": "any"
+                  },
+                  "headerColor": {
+                    "example": "any"
+                  },
+                  "footerColor": {
                     "example": "any"
                   }
                 }
